--- a/BMICalculator/BMICalculator.fxml
+++ b/BMICalculator/BMICalculator.fxml
@@ -3,30 +3,46 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<GridPane fx:id="grid" xmlns:fx="http://javafx.com/fxml" fx:controller="BMICalculatorApp.BMICalculatorController" hgap="10" vgap="8" alignment="CENTER">
-  <padding>
-    <Insets top="10" right="10" bottom="10" left="10"/>
-  </padding>
+<GridPane fx:id="grid" alignment="CENTER" hgap="10" prefHeight="213.0" prefWidth="246.0" style="-fx-background-color: #ADD8E6;" vgap="8" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.democalc.HelloController">
+    <padding>
+        <Insets bottom="10" left="10" right="10" top="10" />
+    </padding>
 
-  <!-- Weight Label and TextField -->
-  <Label text="Weight (kg):" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-  <TextField fx:id="weightField" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+    <!-- Weight Label and TextField -->
+    <Label text="Weight (kg):" />
+    <TextField fx:id="weightinput" GridPane.columnIndex="1" />
 
-  <!-- Height Label and TextField -->
-  <Label text="Height (m):" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-  <TextField fx:id="heightField" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+    <!-- Height Label and TextField -->
+    <Label text="Height (m):" GridPane.rowIndex="1" />
+    <TextField fx:id="heightinput" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-  <!-- BMI Result -->
-  <Label text="BMI:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-  <Label fx:id="bmiResultLabel" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+    <!-- BMI Result TextField -->
+    <Label text="BMI:" GridPane.rowIndex="2" />
+    <TextField fx:id="bmiOutput" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-  <!-- Status Result -->
-  <Label text="Status:" GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-  <Label fx:id="statusResultLabel" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
-
-  <!-- Calculate Button -->
-  <Button text="Calculate" fx:id="calculateButton" onAction="#calculateBMI" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+    <!-- Status Result TextField -->
+    <Label text="Status:" GridPane.rowIndex="3" />
+    <TextField fx:id="statusOutput" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+   <Button fx:id="calculateButton" mnemonicParsing="false" onAction="#calculate" text="calculate" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+   <RadioButton fx:id="unitSwitcher" mnemonicParsing="false" text="lbs/in" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+   <Button fx:id="clear" mnemonicParsing="false" onMouseClicked="#clear" text="clear" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+   <columnConstraints>
+      <ColumnConstraints />
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+   </rowConstraints>
 </GridPane>
